# ChangeLog for x11-terms/rxvt-unicode
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.95 2007/11/11 13:30:35 nixnut Exp $

  11 Nov 2007; nixnut <nixnut@gentoo.org> rxvt-unicode-8.3.ebuild:
  Stable on ppc wrt bug 198780

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org> rxvt-unicode-8.3.ebuild:
  Stable on x86 (bug #198780)

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> rxvt-unicode-8.3.ebuild:
  amd64 stable wrt #198780

*rxvt-unicode-8.3 (21 Aug 2007)

  21 Aug 2007; René Nussbaumer <killerfox@gentoo.org>
  +rxvt-unicode-8.3.ebuild:
  Version bump from upstream

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  rxvt-unicode-8.1.ebuild, rxvt-unicode-8.2.ebuild:
  Drop virtual/x11 references.

  26 Apr 2007; Fabian Groffen <grobian@gentoo.org> rxvt-unicode-8.1.ebuild,
  rxvt-unicode-8.2.ebuild:
  Dropped ppc-macos, see you in prefix

  08 Mar 2007; René Nussbaumer <killerfox@gentoo.org>
  -rxvt-unicode-5.3.ebuild, -rxvt-unicode-7.0.ebuild,
  -rxvt-unicode-7.1.ebuild, -rxvt-unicode-7.7-r1.ebuild,
  -rxvt-unicode-7.7-r2.ebuild, -rxvt-unicode-7.7-r3.ebuild,
  -rxvt-unicode-7.9.ebuild, -rxvt-unicode-8.0.ebuild:
  Removed old versions. Clean up.

  01 Mar 2007; Jose Luis Rivero <yoswink@gentoo.org>
  rxvt-unicode-8.1.ebuild:
  Stable on alpha wrt bug #167846

  27 Feb 2007; Simon Stelling <blubb@gentoo.org> rxvt-unicode-8.1.ebuild:
  stable on amd64; bug 167846

  22 Feb 2007; Jason Wever <weeve@gentoo.org> rxvt-unicode-8.1.ebuild:
  Stable on SPARC wrt bug #167846.

  21 Feb 2007; Markus Rothe <corsair@gentoo.org> rxvt-unicode-8.1.ebuild:
  Stable on ppc64; bug #167846

  21 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  rxvt-unicode-8.1.ebuild:
  stable x86; bug 167846

  21 Feb 2007; René Nussbaumer <killerfox@gentoo.org>
  rxvt-unicode-8.1.ebuild:
  Stable on hppa, ppc.

*rxvt-unicode-8.2 (21 Feb 2007)

  21 Feb 2007; René Nussbaumer <killerfox@gentoo.org>