@@ -1,0 +1,3 @@
+MD5 d15ba0ea7cb54ce7a2a41650e2a5e6ab rxvt-unicode-8.4.tar.bz2 885271
+RMD160 1fa40357a1ecacade007aad231c2e9be85b883a9 rxvt-unicode-8.4.tar.bz2 885271
+SHA256 ff8d904a815151edde72bb3e51d1561125813569cb3d487cbac428ec23facdbb rxvt-unicode-8.4.tar.bz2 885271
