@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/rxvt-unicode
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.95 2007/11/11 13:30:35 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.96 2007/11/11 21:47:12 killerfox Exp $
+
+*rxvt-unicode-8.4 (11 Nov 2007)
+
+  11 Nov 2007; René Nussbaumer <killerfox@gentoo.org>
+  +rxvt-unicode-8.4.ebuild:
+  Version bump by upstream
 
   11 Nov 2007; nixnut <nixnut@gentoo.org> rxvt-unicode-8.3.ebuild:
   Stable on ppc wrt bug 198780
